func_test.result, item_cmpfunc.cc:   Fixed bug #6187: a wrong initial setting for const_item_cache   in Item_cond::fix_fields.